# serdesAI

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PR_DESCRIPTION.md  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
examples/: mcp_server.rs  multi_agent.rs  multi_agent_graph.rs  rag.rs  simple_chat.rs  streaming.rs  structured_output.rs  weather_agent.rs
serdes-ai/: Cargo.toml  README.md
serdes-ai-a2a/: Cargo.toml  README.md
serdes-ai-a2a/src/: broker.rs  lib.rs  schema.rs  server.rs  storage.rs  task.rs  worker.rs
serdes-ai-agent/: Cargo.toml  README.md
serdes-ai-agent/src/: agent.rs  builder.rs  context.rs  error.rs  errors.rs  history.rs  instructions.rs  lib.rs  output.rs  result.rs  run.rs  stream.rs
serdes-ai-core/: Cargo.toml  README.md
serdes-ai-core/src/: errors.rs  format.rs  identifier.rs  lib.rs  settings.rs  usage.rs
serdes-ai-core/src/messages/: cache.rs  content.rs  events.rs  media.rs  mod.rs  parts.rs  request.rs  response.rs  tool_return.rs
serdes-ai-embeddings/: Cargo.toml  README.md
serdes-ai-embeddings/src/: cohere.rs  embedder.rs  embedding.rs  error.rs  lib.rs  model.rs  openai.rs  similarity.rs
serdes-ai-evals/: Cargo.toml  README.md
serdes-ai-evals/benches/: agent_benchmarks.rs
serdes-ai-evals/src/: case.rs  dataset.rs  error.rs  evaluator.rs  lib.rs  metrics.rs  report.rs  result.rs  runner.rs  scorers.rs  suite.rs
serdes-ai-graph/: Cargo.toml  README.md
serdes-ai-graph/src/: edge.rs  error.rs  executor.rs  graph.rs  iter.rs  lib.rs  mermaid.rs  node.rs  persistence.rs  state.rs
serdes-ai-macros/: Cargo.toml  README.md
serdes-ai-macros/src/: agent.rs  lib.rs  output.rs  output_schema.rs  tool.rs  utils.rs
serdes-ai-mcp/: Cargo.toml  README.md
serdes-ai-mcp/src/: client.rs  error.rs  lib.rs  resources.rs  server.rs  toolset.rs  transport.rs  types.rs
serdes-ai-models/: Cargo.toml  README.md
serdes-ai-models/src/: error.rs  fallback.rs  lib.rs  mock.rs  model.rs  profile.rs  schema_transformer.rs
serdes-ai-models/src/anthropic/: mod.rs  model.rs  stream.rs  types.rs
serdes-ai-models/src/antigravity/: mod.rs  model.rs  stream.rs  types.rs
serdes-ai-models/src/azure/: mod.rs
serdes-ai-models/src/bedrock/: mod.rs  types.rs
serdes-ai-models/src/chatgpt_oauth/: mod.rs  model.rs  types.rs
serdes-ai-models/src/claude_code_oauth/: mod.rs  model.rs  stream.rs  types.rs
serdes-ai-models/src/cohere/: mod.rs  model.rs  types.rs
serdes-ai-models/src/google/: mod.rs  model.rs  stream.rs  types.rs
serdes-ai-models/src/groq/: client.rs  mod.rs  types.rs
serdes-ai-models/src/huggingface/: mod.rs  model.rs  types.rs
serdes-ai-models/src/mistral/: mod.rs  types.rs
serdes-ai-models/src/ollama/: mod.rs  types.rs
serdes-ai-models/src/openai/: chat.rs  mod.rs  responses.rs  stream.rs  types.rs
serdes-ai-models/src/openrouter/: mod.rs  model.rs  types.rs
serdes-ai-output/: Cargo.toml  README.md
serdes-ai-output/src/: error.rs  lib.rs  mode.rs  parser.rs  schema.rs  spec.rs  structured.rs  text.rs  toolset.rs  types.rs  validator.rs
serdes-ai-providers/: Cargo.toml  README.md
serdes-ai-providers/src/: anthropic.rs  azure.rs  compatible.rs  config.rs  gateway.rs  google.rs  groq.rs  lib.rs  mistral.rs  ollama.rs  openai.rs  provider.rs  rate_limit.rs  registry.rs  request.rs  response.rs
serdes-ai-providers/src/oauth/: config.rs  context.rs  flow.rs  mod.rs  server.rs
serdes-ai-retries/: Cargo.toml  README.md
serdes-ai-retries/src/: backoff.rs  config.rs  error.rs  executor.rs  lib.rs  policy.rs  strategy.rs  transport.rs
serdes-ai-streaming/: Cargo.toml  README.md
serdes-ai-streaming/src/: agent_stream.rs  debounce.rs  error.rs  events.rs  lib.rs  partial_response.rs  parts_manager.rs  sse.rs  websocket.rs
serdes-ai-tools/: Cargo.toml  README.md
serdes-ai-tools/src/: context.rs  deferred.rs  definition.rs  errors.rs  lib.rs  registry.rs  return_types.rs  schema.rs  tool.rs
serdes-ai-tools/src/builtin/: code_execution.rs  file_search.rs  image_gen.rs  mcp_server.rs  memory.rs  mod.rs  web_fetch.rs  web_search.rs
serdes-ai-tools/src/common/: duckduckgo.rs  mod.rs  tavily.rs
serdes-ai-toolsets/: Cargo.toml  README.md
serdes-ai-toolsets/src/: abstract_toolset.rs  approval.rs  combined.rs  dynamic.rs  external.rs  filtered.rs  function.rs  lib.rs  prefixed.rs  prepared.rs  renamed.rs  wrapper.rs
serdes-ai-ui/: Cargo.toml  README.md
serdes-ai-ui/src/: lib.rs
serdes-ai-ui/src/ag_ui/: mod.rs  stream.rs  types.rs
serdes-ai-ui/src/vercel_ai/: mod.rs  stream.rs  types.rs
serdes-ai/src/: direct.rs  lib.rs
