[package]
name = "serdes-ai-a2a"
description = "Agent-to-Agent (A2A) protocol support for serdesAI"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["ai", "agent", "a2a", "protocol", "rpc"]
categories = ["api-bindings", "network-programming"]

[features]
default = []
server = ["axum", "tower"]

[dependencies]
serdes-ai-core = { workspace = true }
serdes-ai-agent = { workspace = true }

async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }

# HTTP server (optional)
axum = { version = "0.7", optional = true }
tower = { version = "0.5", optional = true }

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }
rstest = { workspace = true }
pretty_assertions = { workspace = true }
