[package]
name = "serdes-ai-agent"
description = "Agent implementation for serdes-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["ai", "llm", "agent", "autonomous"]
categories = ["development-tools"]
readme = "README.md"

[features]
default = []
full = ["tracing-integration"]
tracing-integration = ["dep:tracing", "serdes-ai-core/tracing-integration"]
regex = ["dep:regex"]

[dependencies]
serdes-ai-core = { workspace = true }
serdes-ai-models = { workspace = true }
serdes-ai-tools = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
uuid = { workspace = true }
chrono = { workspace = true }
pin-project-lite = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }
rstest = { workspace = true }
pretty_assertions = { workspace = true }
