[package]
name = "serdes-ai-core"
description = "Core types, messages, and error handling for serdes-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["ai", "llm", "core", "types"]
categories = ["development-tools"]
readme = "README.md"

[features]
default = []
full = ["tracing-integration", "otel"]
tracing-integration = ["dep:tracing"]
otel = ["dep:opentelemetry", "dep:tracing-opentelemetry"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
indexmap = { workspace = true }
mime = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }
derive_builder = { workspace = true }

# Optional observability
tracing = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
pretty_assertions = { workspace = true }
rstest = { workspace = true }
