[package]
name = "serdes-ai-graph"
description = "Graph-based execution and multi-agent orchestration for serdes-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["ai", "llm", "graph", "workflow", "orchestration"]
categories = ["asynchronous", "development-tools"]

[features]
default = []
visualization = []
persistence = []
full = ["visualization", "persistence"]

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
rstest = { workspace = true }
