[package]
name = "serdes-ai-macros"
description = "Procedural macros for serdes-ai (tool definitions, output schemas)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["ai", "llm", "macros", "proc-macro"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[features]
default = []

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
darling = { workspace = true }

[dev-dependencies]
serdes-ai-core = { workspace = true }
serdes-ai-tools = { workspace = true }
trybuild = "1.0"
