[package]
name = "serdes-ai-tools"
description = "Tool system for serdes-ai agents"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["ai", "llm", "tools", "function-calling"]
categories = ["development-tools"]
readme = "README.md"

[features]
default = []
schema-validation = ["dep:jsonschema"]
common-tools = ["dep:reqwest", "dep:urlencoding"]

[dependencies]
serdes-ai-core = { workspace = true }
serdes-ai-macros = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
indexmap = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }

# Optional schema validation
jsonschema = { version = "0.18", optional = true }

# Optional HTTP client for common tools
reqwest = { version = "0.12", features = ["json"], optional = true }
urlencoding = { version = "2.1", optional = true }

[dev-dependencies]
tokio-test = { workspace = true }
rstest = { workspace = true }
pretty_assertions = { workspace = true }
